--- a/css/styles.css
+++ b/css/styles.css
@@ -139,12 +139,15 @@ HEADER .wrapper .phone-section A.callback {
 
 SECTION .header-cover {
   position: relative;
+  background: url('../img/header-image.png') no-repeat center center;
+  background-size: cover;
+  width: 100%;
+  height: 945px;
 }
 
 SECTION .header-cover .large-rect {
-  width: 40%;
-  max-width: 558px;
-  max-height: 558px;
+  width: 558px;
+  height: 558px;
   background: url('../img/large-rect.png') no-repeat center center;
   background-size: contain;
   position: absolute;
@@ -243,4 +246,118 @@ SECTION .header-cover .small-rect .text-x-large {
 SECTION .header-cover .small-rect .text-small {
   font-size: 16px;
   line-height: 20px;
+}
+
+
+
+
+SECTION .shops-map {
+  position: relative;
+  background: url('../img/map-bg.png') no-repeat center center;
+  background-size: cover;
+  width: 100%;
+  height: 900px;
+}
+
+SECTION .shops-map .squares {
+  position: absolute;
+  background: url('../img/squares.png') no-repeat center center;
+  background-size: cover;
+  width: 674px;
+  height: 532px;
+  top: 0;
+  right: 56%;
+}
+
+SECTION .shops-map .squares SPAN {
+  display: block;
+  text-transform: uppercase;
+  font-size: 30px;
+  width: 390px;
+  margin-left: 185px;
+}
+
+SECTION .shops-map .squares SPAN:first-child {
+  margin-top: 108px;
+}
+
+SECTION .shops-map .squares .text-large {
+  font-size: 40px;
+  font-weight: bold;
+  padding: 5px 0 20px;
+}
+
+SECTION .shops-map .squares .text-small {
+  font-size: 14px;
+  line-height: 18px;
+}
+
+SECTION .shops-map .map-ukraine {
+  background: url('../img/map-ukraine-full.png') no-repeat center center;
+  background-size: cover;
+  position: absolute;
+  width: 761px;
+  height: 530px;
+  left: 41%;
+  top: 120px;
+}
+
+SECTION .shops-map .map-ukraine .descr {
+  text-transform: uppercase;
+  display: block;
+  width: 280px;
+  margin-left: 80px;
+}
+
+SECTION .shops-map .shops {
+  width: 100%;
+  height: 230px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .8);
+}
+
+SECTION .shops-map .shops .shop {
+  width: 302px;
+  height: 108px;
+  margin-top: 64px;
+  position: relative;
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
+SECTION .shops-map .shops .shop:before,
+SECTION .shops-map .shops .shop:last-child:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -7px;
+  background: url('../img/pluses.png') no-repeat center center;
+  background-size: contain;
+  width: 11px;
+  height: 100%;
+}
+
+SECTION .shops-map .shops .shop:last-child:after {
+  left: auto;
+  right: -7px;
+}
+
+SECTION .shops-map .shops .shop.epitsentr {
+  background-image: url('../img/epitsentr.png');
+}
+
+SECTION .shops-map .shops .shop.novaya-liniya {
+  background-image: url('../img/novaya-liniya.png');
+}
+
+SECTION .shops-map .shops .shop.leo-keramika {
+  background-image: url('../img/leo-keramika.png');
+}
+
+SECTION .shops-map .shops .shop.domus {
+  background-image: url('../img/domus.png');
 }
