--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,23 @@ body {
 }
 
 .text-red {
-  color: #d24a43;
+  color: #db534c;
+}
+
+.text-size-28px {
+  font-size: 28px;
+}
+
+.text-size-20px {
+  font-size: 20px;
+}
+
+.text-size-16px {
+  font-size: 16px;
+}
+
+.text-size-14px {
+  font-size: 14px;
 }
 
 .left {
@@ -54,14 +70,16 @@ body {
 }
 
 .btn {
-  color: #4b4b48;
-  background: none;
-  border: 1px solid #4b4b48;
-  padding: 5px 10px;
+  color: #ffffff;
+  background: #db534c;
+  padding: 20px 25px;
   display: inline-block;
-  border-radius: 8px;
-  min-width: 180px;
+  border-radius: 4px;
   text-align: center;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 HEADER {
@@ -138,6 +156,7 @@ HEADER .wrapper .phone-section A.callback {
 }
 
 SECTION .header-cover {
+  overflow: hidden;
   position: relative;
   background: url('../img/header-image.png') no-repeat center center;
   background-size: cover;
@@ -318,10 +337,15 @@ SECTION .shops-map .shops {
   background-color: rgba(0, 0, 0, .8);
 }
 
+SECTION .shops-map .shops .descr {
+  margin-top: 30px;
+  text-transform: uppercase;
+}
+
 SECTION .shops-map .shops .shop {
   width: 302px;
   height: 108px;
-  margin-top: 64px;
+  margin-top: 36px;
   position: relative;
   display: inline-block;
   background-repeat: no-repeat;
@@ -360,4 +384,95 @@ SECTION .shops-map .shops .shop.leo-keramika {
 
 SECTION .shops-map .shops .shop.domus {
   background-image: url('../img/domus.png');
+}
+
+
+
+SECTION .slider-section {
+  width: 100%;
+  height: 740px;
+  background: url('../img/plaster.png') repeat;
+}
+
+SECTION .slider-section .slide-contents {
+  color: #4a4a4a;
+  display: inline-block;
+}
+
+SECTION .slider-section .slide-contents .title {
+  margin-top: 100px;
+  margin-bottom: 88px;
+  display: block;
+  text-transform: uppercase;
+  font-size: 30px;
+}
+
+SECTION .slider-section .slide-contents .product-preview .product-thumb {
+  width: 115px;
+  height: 115px;
+  margin: 0 12px 12px 1px;
+  cursor: pointer;
+}
+
+SECTION .slider-section .slide-contents .product-preview .product-thumb.active {
+  border-top: 1px solid #d24a43;
+  border-left: 1px solid #d24a43;
+  box-sizing: border-box;
+}
+
+SECTION .slider-section .slide-contents .product-preview .product-thumb IMG,
+SECTION .slider-section .slide-contents .product-preview .product-photo IMG {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+SECTION .slider-section .slide-contents .product-preview .product-photo {
+  width: 369px;
+  height: 369px;
+}
+
+SECTION .slider-section .slide-contents .product-descr {
+  width: 532px;
+  margin-left: 58px;
+}
+
+SECTION .slider-section .slide-contents .product-descr .product-about {
+  height: 147px;
+  overflow: auto;
+}
+
+SECTION .slider-section .slide-contents .product-descr .product-title {
+  text-transform: uppercase;
+  font-size: 36px;
+  font-weight: bold;
+}
+
+SECTION .slider-section .slide-contents .product-descr H2 {
+  margin-top: 25px;
+  margin-bottom: 13px;
+}
+
+SECTION .slider-section .slide-contents .product-descr P {
+  line-height: 17px;
+  overflow: auto;
+  height: 89px;
+}
+
+SECTION .slider-section .slide-contents .product-descr .product-size {
+  display: inline-block;
+  border: 1px solid #d24a43;
+  font-size: 14px;
+  padding: 10px 14px;
+  border-radius: 3px;
+}
+
+
+SECTION .slider-section .slide-contents .product-descr .product-price-order {
+  margin-top: 16px;
+}
+
+SECTION .slider-section .slide-contents .product-descr .product-price {
+  margin-top: 12px;
 }
