--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,20 @@ body {
   font-weight: bold !important;
 }
 
+.text-uppercase {
+  text-transform: uppercase;
+}
+
 .text-red {
-  color: #db534c;
+  color: #db534c !important;
+}
+
+.text-size-40px {
+  font-size: 40px;
+}
+
+.text-size-30px {
+  font-size: 30px;
 }
 
 .text-size-28px {
@@ -29,6 +41,10 @@ body {
 
 .text-size-20px {
   font-size: 20px;
+}
+
+.text-size-18px {
+  font-size: 18px;
 }
 
 .text-size-16px {
@@ -72,7 +88,7 @@ body {
 .btn {
   color: #ffffff;
   background: #db534c;
-  padding: 20px 25px;
+  padding: 18px 23px;
   display: inline-block;
   border-radius: 4px;
   text-align: center;
@@ -80,6 +96,32 @@ body {
   font-size: 16px;
   font-weight: bold;
   cursor: pointer;
+  border: none;
+}
+
+.input {
+  font-size: 18px;
+  padding: 12px;
+  background: #ffffff;
+  border: 1px solid #db534c;
+  box-sizing: border-box;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  width: 60px;
+  height: 94px;
+  background-size: contain;
+}
+
+.swiper-button-prev {
+  background-image: url('../img/slider-arrow-left.png');
+  left: 288px;
+}
+
+.swiper-button-next {
+  background-image: url('../img/slider-arrow-right.png');
+  right: 288px;
 }
 
 HEADER {
@@ -278,9 +320,9 @@ SECTION .shops-map {
   height: 900px;
 }
 
-SECTION .shops-map .squares {
+SECTION .shops-map .map-squares {
   position: absolute;
-  background: url('../img/squares.png') no-repeat center center;
+  background: url('../img/map-squares.png') no-repeat center center;
   background-size: cover;
   width: 674px;
   height: 532px;
@@ -288,7 +330,7 @@ SECTION .shops-map .squares {
   right: 56%;
 }
 
-SECTION .shops-map .squares SPAN {
+SECTION .shops-map .map-squares SPAN {
   display: block;
   text-transform: uppercase;
   font-size: 30px;
@@ -296,17 +338,19 @@ SECTION .shops-map .squares SPAN {
   margin-left: 185px;
 }
 
-SECTION .shops-map .squares SPAN:first-child {
+SECTION .shops-map .map-squares SPAN:first-child {
   margin-top: 108px;
 }
 
-SECTION .shops-map .squares .text-large {
+SECTION .shops-map .map-squares .text-large,
+SECTION .get-catalog .catalog-squares .text-large {
   font-size: 40px;
   font-weight: bold;
   padding: 5px 0 20px;
 }
 
-SECTION .shops-map .squares .text-small {
+SECTION .shops-map .map-squares .text-small,
+SECTION .get-catalog .catalog-squares .text-small {
   font-size: 14px;
   line-height: 18px;
 }
@@ -475,4 +519,114 @@ SECTION .slider-section .slide-contents .product-descr .product-price-order {
 
 SECTION .slider-section .slide-contents .product-descr .product-price {
   margin-top: 12px;
+}
+
+
+SECTION .get-catalog {
+    position: relative;
+    background: url('../img/receive-catalog-bg.png') no-repeat center center;
+    background-size: cover;
+    width: 100%;
+    height: 635px;
+}
+
+SECTION .get-catalog .catalog-squares {
+  position: absolute;
+  background: url('../img/catalog-squares.png') no-repeat center center;
+  background-size: cover;
+  width: 676px;
+  height: 590px;
+  top: 0;
+  right: 56%;
+}
+
+SECTION .get-catalog .catalog-squares SPAN {
+  display: block;
+  text-transform: uppercase;
+  font-size: 30px;
+  width: 570px;
+  margin-left: 185px;
+}
+
+SECTION .get-catalog .catalog-squares SPAN:first-child {
+  margin-top: 200px;
+}
+
+SECTION .get-catalog .catalog-form {
+  width: 375px;
+  top: 218px;
+  position: absolute;
+  left: 55.5%;
+}
+
+SECTION .get-catalog .catalog-form .row {
+  margin-bottom: 22px;
+}
+
+
+
+SECTION .request-callback {
+  width: 100%;
+  height: 842px;
+  text-align: center;
+  background: url('../img/plaster.png') repeat;
+}
+
+SECTION .request-callback .callback-diamonds {
+  margin-top: 120px;
+  display: inline-block;
+}
+
+SECTION .request-callback .callback-title {
+  text-transform: uppercase;
+  padding: 100px 0 10px 0;
+}
+
+SECTION .request-callback .callback-subtitle {
+  text-transform: uppercase;
+  color: #191919;
+}
+
+SECTION .request-callback .callback-diamond {
+  width: 130px;
+  height: 130px;
+}
+
+SECTION .request-callback .diamond-wrapper {
+  width: 170px;
+  height: 170px;
+  padding: 10px;
+  transform: rotateZ(45deg);
+  border: 1px solid red;
+  display: inline-block;
+  margin-right: 108px;
+  position: relative;
+}
+
+SECTION .request-callback .diamond-descr {
+  transform: rotateZ(-45deg) translate(57px, 100px);
+  color: #191919;
+  width: 250px;
+  height: 100px;
+  position: absolute;
+  font-size: 18px;
+  line-height: 22px;
+}
+
+SECTION .request-callback .diamond-wrapper:last-child {
+  margin-right: 0;
+}
+
+SECTION .request-callback .diamond-wrapper .callback-diamond {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+SECTION .request-callback .diamond-wrapper .callback-diamond .diamond-photo {
+  background-position: center center;
+  background-repeat: no-repeat;
+  transform: rotateZ(-45deg) translate(0, -21%);
+  width: 142%;
+  height: 142%;
 }
