--- a/css/styles.css
+++ b/css/styles.css
@@ -603,6 +603,10 @@ SECTION .request-callback .diamond-wrapper {
   position: relative;
 }
 
+SECTION .request-callback .diamond-wrapper:first-child {
+  margin-left: 105px;
+}
+
 SECTION .request-callback .diamond-descr {
   transform: rotateZ(-45deg) translate(57px, 100px);
   color: #191919;
@@ -629,4 +633,39 @@ SECTION .request-callback .diamond-wrapper .callback-diamond .diamond-photo {
   transform: rotateZ(-45deg) translate(0, -21%);
   width: 142%;
   height: 142%;
+}
+
+SECTION .request-callback .callback-notice {
+  font-size: 14px;
+  color: #191919;
+  margin: 220px 0 15px;
+}
+
+SECTION .request-callback .btn {
+  width: 330px;
+}
+
+
+
+SECTION .reviews {
+  position: relative;
+  background: url('../img/reviews-bg.png') no-repeat center center;
+  background-size: cover;
+  width: 100%;
+  height: 770px;
+}
+
+SECTION .reviews .reviews-partners {
+  width: 100%;
+  height: 194px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, .8);
+}
+
+SECTION .reviews .reviews-partners .reviews-title {
+  text-transform: uppercase;
+  font-size: 30px;
+  margin-top: 46px;
 }
