--- a/css/styles.css
+++ b/css/styles.css
@@ -1724,4 +1724,115 @@ HEADER {
   .footer-contacts .socials .title {
     margin-bottom: 12px;
   }
+  .ask-question {
+    height: 275px;
+  }
+  .request-callback {
+    height: auto;
+  }
+  .reviews {
+    height: auto;
+  }
+  .reviews .reviews-partners {
+    position: static;
+    height: 126px;
+  }
+  .reviews .reviews-square {
+    position: static;
+    width: 90%;
+    height: auto;
+    background: none;
+    margin: 0 auto;
+  }
+  .reviews .rewiews-slider {
+    position: static;
+  }
+  .ask-question .ask-question-request {
+    position: static;
+    margin-top: 60px;
+    width: 90%;
+    transform: none;
+    margin: 0 auto;
+    padding: 0;
+    background: none;
+  }
+  .ask-question .ask-question-title {
+    font-size: 29px;
+    padding-top: 35px;
+    padding-bottom: 20px;
+    width: 75%;
+    margin: 0 auto;
+  }
+  .ask-question .btn {
+    width: 85%;
+  }
+  .ask-question .hand {
+    bottom: auto;
+    top: 190px;
+    width: 200px;
+    height: 85px;
+    transform: translateX(32%);
+  }
+  .reviews .rewiews-slider {
+    width: 90%;
+    height: 260px;
+    margin: 0 auto;
+  }
+  .reviews .slide-contents .comment {
+    width: 100%;
+    height: 142px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+  .reviews .slide-contents {
+    border: none;
+    width: 100%;
+    padding: 0;
+  }
+  .reviews .slide-contents .author-photo {
+    width: 55px;
+    height: 55px;
+    top: 152px;
+    right: auto;
+    left: 0;
+  }
+  .reviews .slide-contents .author-company {
+    margin-left: 70px;
+  }
+  .reviews .slide-contents .author-name {
+    margin-left: 70px;
+  }
+  .reviews .reviews-square .reviews-pagination {
+    position: absolute;
+    bottom: 20px;
+    margin-left: 45%;
+    transform: translateX(-50%);
+    z-index: 2;
+  }
+  .reviews .reviews-square > SPAN {
+    width: 100%;
+    margin-left: 0;
+    text-align: center;
+  }
+  .reviews .reviews-square > SPAN:first-child {
+    margin-top: 30px;
+  }
+  .reviews .reviews-partners .our-partners .partner {
+    padding-right: 15px;
+  }
+  .reviews .reviews-partners .our-partners .partner IMG {
+    max-width: 55px;
+    max-height: 45px;
+  }
+  .reviews .reviews-partners .our-partners {
+    height: 48px;
+  }
+  .reviews .reviews-partners .reviews-title {
+    font-size: 24px;
+    margin-top: 0;
+    padding-top: 28px;
+  }
+  .reviews .reviews-square .text-large {
+    font-size: 33px;
+  }
 }
