--- a/css/styles.css
+++ b/css/styles.css
@@ -1835,4 +1835,110 @@ HEADER {
   .reviews .reviews-square .text-large {
     font-size: 33px;
   }
+  .popup-wrapper.popup-1 .popup {
+    width: calc(90% - 24px);
+  }
+  .popup-wrapper .popup .title {
+    padding-top: 6px;
+    font-size: 26px;
+  }
+  .popup-wrapper .popup .descr {
+    font-size: 16px;
+    margin: 15px auto 0;
+  }
+  .popup-wrapper .popup {
+    padding: 12px;
+  }
+  .popup-wrapper .popup .popup-form .row {
+    margin-bottom: 15px;
+    width: 100%;
+  }
+  .popup-wrapper .popup .popup-form .row:last-child {
+    margin-bottom: 0;
+  }
+  .popup-wrapper .popup .popup-form .row:last-child .btn {
+    margin-top: 0;
+  }
+  .popup-wrapper .popup .popup-form {
+    margin-top: 45px;
+  }
+  .popup-wrapper.popup-2 .popup {
+    width: calc(90% - 24px);
+  }
+  .popup-wrapper.popup-2 .popup .descr {
+    padding-bottom: 8px;
+  }
+  .popup-wrapper .popup .popup-contents .popup-close {
+    font-size: 24px;
+    right: -11px;
+    top: -10px;
+  }
+  .request-callback .callback-title {
+    padding: 50px 0 10px 0;
+    font-size: 24px;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .request-callback .callback-subtitle {
+    font-size: 20px;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .request-callback .diamond-wrapper {
+    margin: 0 auto !important;
+  }
+  .request-callback .diamond-descr {
+    width: 240px;
+    margin-left: 0;
+    margin-top: 50px;
+    padding-bottom: 50px;
+  }
+  .request-callback .callback-diamonds {
+    margin-top: 75px;
+  }
+  .request-callback .callback-notice {
+    margin: 0 auto 10px;
+    width: 90%;
+  }
+  .request-callback .btn {
+    width: 90%;
+    margin-bottom: 40px;
+  }
+  .get-catalog {
+    height: auto;
+  }
+  .get-catalog .catalog-squares {
+    background: none;
+    position: static;
+    width: 90%;
+    margin: 0 auto;
+    height: auto;
+  }
+  .get-catalog .catalog-squares SPAN {
+    width: 100%;
+    text-align: center;
+    font-size: 24px;
+  }
+  .get-catalog .catalog-squares .text-small {
+    font-size: 12px;
+    margin: 0 0 25px;
+  }
+  .get-catalog .catalog-squares SPAN:first-child {
+    padding-top: 30px;
+    margin: 0;
+  }
+  .get-catalog .catalog-squares .text-large {
+    margin: 20px 0 0;
+    font-size: 28px;
+    padding-bottom: 0;
+  }
+  .get-catalog .catalog-form {
+    position: static;
+    width: 90%;
+    margin: 0 auto;
+    padding-bottom: 20px;
+  }
+  .get-catalog .catalog-form .row {
+    margin-bottom: 15px;
+  }
 }
